# agent_aider_worktree

./: .pylintrc  .testmondata  .testmondata-shm  .testmondata-wal  README.md  agent-aider-worktree.py  context.txt  custom_aider_history.md  pyproject.toml
agent_aider_worktree/: __init__.py  cli.py  core.py
src/agent_aider_worktree/: __init__.py  __main__.py
tests/: test_cli.py  test_core.py  test_readme.py
